[metadata]

name = ahk
version = 1.0.0b
author_email = spencer.young@spyoung.com
author = Spencer Young
description = A Python wrapper for AHK
long_description = file: docs/README.md
long_description_content_type = text/markdown
url = https://github.com/spyoungtech/ahk
keywords =
    ahk
    autohotkey
    windows
    mouse
    keyboard
    automation
    pyautogui
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Topic :: Desktop Environment
    Programming Language :: Python
    Environment :: Win32 (MS Windows)
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
python_requires = >=3.8.0
packages =
    ahk
    ahk.templates
    ahk._async
    ahk._sync
install_requires =
    typing_extensions; python_version < "3.11"
    jinja2>=3.0
cmdclass =
    build_py = buildunasync.build_py

[options.package_data]
ahk =
    py.typed
    templates/*.ahk

[bdist_wheel]
universal = True
