[metadata]

name = ahk
version = 1.7.8
author_email = spencer.young@spyoung.com
author = Spencer Young
description = A Python wrapper for AHK
long_description = file: docs/README.md
long_description_content_type = text/markdown
url = https://github.com/spyoungtech/ahk
project_urls =
    Documentation = https://ahk.readthedocs.io/en/latest/
    Funding = https://github.com/sponsors/spyoungtech/
    Source = https://github.com/spyoungtech/ahk
    Tracker = https://github.com/spyoungtech/ahk/issues
keywords =
    ahk
    autohotkey
    windows
    mouse
    keyboard
    automation
    pyautogui
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Topic :: Desktop Environment
    Programming Language :: Python
    Environment :: Win32 (MS Windows)
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Typing :: Typed

[options]
include_package_data = True
python_requires = >=3.8.0
packages =
    ahk
    ahk.templates
    ahk._async
    ahk._sync
install_requires =
    typing_extensions; python_version < "3.11"
    jinja2>=3.0
cmdclass =
    build_py = buildunasync.build_py

[options.extras_require]
binary = ahk-binary==2023.9.0

[options.package_data]
ahk =
    py.typed
    templates/*.ahk
